--- a/Admin/package.json
+++ b/Admin/package.json
@@ -39,5 +39,9 @@
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.8",
     "vite-plugin-remove-console": "^2.2.0"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "author": "",
+  "license": "ISC"
 }
