--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.462.0",
+    "pdfmake": "^0.2.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
@@ -28,6 +29,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.0.1",
     "react-slick": "^0.30.2",
+    "react-to-pdf": "^1.0.1",
     "react-to-print": "^3.0.2",
     "react-toastify": "^11.0.2",
     "slick-carousel": "^1.8.1",
