--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     environment:
       - DATABASE_URI=mongodb+srv://ignipulse:globalTuitions@gloabl.p3t51.mongodb.net/Global-Tuitions?retryWrites=true&w=majority
       - PORT=3000
-      - ADMIN_EMAIL=sixpmmediaofficial@gmail.com
-      - ADMIN_PASS=qeri tkfv nowf zrzk 
+      - ADMIN_EMAIL=globaltuitions.co.uk@gmail.com
+      - ADMIN_PASS=oins nigg yiui xqbj
       - JWT_EXP=7d
       - SECRET_KEY=privateKey
   client:
