--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - DATABASE_URI=mongodb+srv://ignipulse:globalTuitions@gloabl.p3t51.mongodb.net/Global-Tuitions?retryWrites=true&w=majority
       - PORT=3000
       - ADMIN_EMAIL=globaltuitions.co.uk@gmail.com
-      - ADMIN_PASS=oins nigg yiui xqbj
+      - ADMIN_PASS=mocc vfth xwoy ocyq
       - JWT_EXP=7d
       - SECRET_KEY=privateKey
   client:
