--- a/Admin/package.json
+++ b/Admin/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.1",
+    "draft-js": "^0.11.7",
     "jodit-react": "^4.1.2",
     "json-server": "^1.0.0-beta.3",
     "moment": "^2.30.1",
@@ -22,7 +23,10 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "slate-history": "^0.110.3",
+    "slate-hyperscript": "^0.100.0",
+    "slate-react": "^0.112.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
