--- a/Admin/package.json
+++ b/Admin/package.json
@@ -10,13 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.17.3",
+    "@mantine/hooks": "^7.17.3",
+    "@mantine/tiptap": "^7.17.3",
+    "@tabler/icons-react": "^3.31.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-blockquote": "^2.11.7",
+    "@tiptap/extension-bullet-list": "^2.11.7",
+    "@tiptap/extension-code-block-lowlight": "^2.11.7",
+    "@tiptap/extension-heading": "^2.11.7",
+    "@tiptap/extension-highlight": "^2.11.7",
+    "@tiptap/extension-history": "^2.11.7",
+    "@tiptap/extension-horizontal-rule": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/extension-list-item": "^2.11.7",
+    "@tiptap/extension-ordered-list": "^2.11.7",
+    "@tiptap/extension-strike": "^2.11.7",
+    "@tiptap/extension-subscript": "^2.11.7",
+    "@tiptap/extension-superscript": "^2.11.7",
+    "@tiptap/extension-text-align": "^2.11.7",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.7.7",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.1",
-    "draft-js": "^0.11.7",
-    "jodit-react": "^4.1.2",
     "json-server": "^1.0.0-beta.3",
+    "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
