--- a/Admin/package.json
+++ b/Admin/package.json
@@ -18,6 +18,7 @@
     "@tiptap/extension-blockquote": "^2.11.7",
     "@tiptap/extension-bullet-list": "^2.11.7",
     "@tiptap/extension-code-block-lowlight": "^2.11.7",
+    "@tiptap/extension-font-family": "^2.23.1",
     "@tiptap/extension-heading": "^2.11.7",
     "@tiptap/extension-highlight": "^2.11.7",
     "@tiptap/extension-history": "^2.11.7",
